[TASK] Adjust changelog of v4.0.0

--- a/Documentation/About/Changelog/4-0-0.rst
+++ b/Documentation/About/Changelog/4-0-0.rst
@@ -1,7 +1,7 @@
 .. include:: ../../Includes.txt
 
 ==========================
-Version 4.0.0 - 2022/03/03
+Version 4.0.0 - 2023/09/01
 ==========================
 
 This release is a major release, which will likely be breaking.
@@ -35,6 +35,130 @@ All Changes
 
 This is a list of all changes in this release::
 
-   2021-08-04 [TASK] Add possibility to add an anchor to the referrer url (Commit f4ff9745 by Fabian Martin)
+    2023-08-31 [BUGFIX] Fix no_typoscript error for version 11 (Commit ee9a068 by Yassine Abid)
+    2023-08-31 [TASK] Fix soft logout (Commit d509179 by Yassine Abid)
+    2023-08-31 [TASK] Fix cs (Commit 014547d by Yassine Abid)
+    2023-08-31 [TASK] Require cs fixer on dev environment (Commit 5747ee2 by Yassine Abid)
+    2022-03-10 Merge pull request #19 from elbebass/4-0-x (Commit 3930c79 by Max Rösch)
+    2022-03-10 [BUGFIX] ParseFunc must return int instead of real boolean (Commit e006056 by Max Rösch)
+    2022-03-09 Merge pull request #18 from elbebass/4-0-x (Commit 060f4e7 by Max Rösch)
+    2022-03-08 [TASK] Get rid of obsolete user model (Commit 0148360 by Max Rösch)
+    2022-03-08 [WIP] Frontend user updates working - authentication still in progress (Commit 6801b33 by Max Rösch)
+    2022-03-08 [WIP] Refactoring (Commit 581c31a by Max Rösch)
+    2022-03-08 [TASK] Remove Auth0Middleware for the moment (Commit 27ca43d by Max Rösch)
+    2022-03-08 [TASK] Unify naming of extension manager configuration (Commit 773f457 by Max Rösch)
+    2022-03-08 [TASK] Add correct handling of soft logout process (Commit 220aaed by Max Rösch)
+    2022-03-08 [TASK] Remove todo after checking code (Commit 13fbbf7 by Max Rösch)
+    2022-03-08 [BUGFIX] Decode management API response correctly (Commit 34dbd50 by Max Rösch)
+    2022-03-08 [WIP] Some more small refactoring changes (Commit ae48ee5 by Max Rösch)
+    2022-03-04 [TASK] Refactor SSL key getter function (Commit b664faa by Max Rösch)
+    2022-03-04 Merge pull request #17 from elbebass/4-0-x (Commit fe88c2a by Max Rösch)
+    2022-03-04 [BUGFIX] Add missing bracket resulting from merge conflict (Commit 549121a by Max Rösch)
+    2022-03-04 Merge pull request #16 from elbebass/4-0-x (Commit 3cdadb2 by Max Rösch)
+    2022-03-04 Merge branch 'dev-4.x' into 4-0-x (Commit d1364a8 by Max Rösch)
+    2022-03-03 [TASK] Update library composer json (Commit c5062cf by Max Rösch)
+    2022-03-03 [WIP] Start documentation while debugging (Commit cf6675f by Max Rösch)
+    2022-03-03 [TASK] Update and normalize composer json (Commit 5ebe3c4 by Max Rösch)
+    2022-03-02 [TASK] Move model in cleaner namespace (Commit 8c7396b by Max Rösch)
+    2022-03-02 [TASK] Update version matrxi (Commit aad81fc by Max Rösch)
+    2022-02-24 [TASK] Add callback to login action and echo URL for further debugging (Commit f312c8e by Max Rösch)
+    2022-02-24 [TASK] Add new company code-style and adapt files (Commit 5dc044d by Max Rösch)
+    2022-02-24 [TASK] Refactor factory class (Commit 80048cd by Max Rösch)
+    2022-02-24 [TASK] Remove secret_base64_encoded configuration (Commit 0826a2c by Max Rösch)
+    2022-02-24 [TASK] Refactor factory class and usage (Commit d112ea2 by Max Rösch)
+    2022-02-24 [TASK] Remove JwtConfiguration class which only provided two constants now (Commit 4678cc1 by Max Rösch)
+    2022-02-24 [BUGFIX] Remove wrong CSS class from textfield (Commit 785a9d8 by Max Rösch)
+    2022-02-24 [BUGFIX] Remove wrong CSS class from textfield (Commit 1929b74 by Max Rösch)
+    2022-02-24 [CODE Codestyle (Commit 6ea3e1d by Max Rösch)
+    2022-02-24 [WIP] BE user creation and update working (Commit 699b709 by Max Rösch)
+    2022-02-21 [BUGFIX] Fix backend logout with redirect (Commit ec0f1ee by Max Rösch)
+    2022-02-21 [WIP] Working but bugs :p (Commit 78d4a45 by Max Rösch)
+    2022-02-21 [TASK] Remove obsolete fluid count (Commit 9c70191 by Max Rösch)
+    2022-02-21 [TASK] Disable / remove tests for the moment (Commit f2309b4 by Max Rösch)
+    2022-02-21 [TASK] Use image viewhelper for Auth0 logo on login view (Commit 97a4380 by Max Rösch)
+    2022-02-21 [BUGFIX] Fix missing namespace and form select styling for Bootstrap v5 (Commit 3b7a6ac by Max Rösch)
+    2022-02-18 [WIP] Refactor session handling (Commit 48bdcd9 by Max Rösch)
+    2022-02-18 [TASK] Update CI file to reflect new php-cs-fixer configuration file name (Commit d23b950 by Max Rösch)
+    2022-02-18 [CODE] Codestyle (Commit 7285070 by Max Rösch)
+    2022-02-18 [WIP] Remove old API etc. and introduce basic SDK usage (Commit 978cd04 by Max Rösch)
+    2022-02-18 [TASK] Move PHP-CS-fixer config file to prefered name (Commit 048f471 by Max Rösch)
+    2022-02-16 [TASK] Code clean up - parameters etc. (Commit 2312375 by Max Rösch)
+    2022-02-16 [TASK] Code clean up - parameters etc. (Commit d6008e3 by Max Rösch)
+    2022-02-16 [TASK] Update icon usage (Commit 35d6416 by Max Rösch)
+    2022-02-16 [TASK] Use Utils:jsonEncode instead of deprecated method (Commit adefe2f by Max Rösch)
+    2022-02-16 [TASK] Update language files and add translation (Commit de0d21b by Max Rösch)
+    2022-02-16 [TASK] Optimize svg icons (Commit 68d4c39 by Max Rösch)
+    2022-02-16 [TASK] Adapt CI for TYPO3 v10 / v11 with PHP 7.4 / 8.0 (Commit 838bd45 by Max Rösch)
+    2022-02-16 [TASK] Remove deprecated usage of environmentService (Commit 5da6c90 by Max Rösch)
+    Yassine Abid@leuchtfeuer-Latitude-1:~/projects/typo3-extensions/dev/auth0-for-typo3$ git log --pretty=format:"%as %s (Commit %h by %aN)"
+    2023-08-31 [TASK] Remove deprecated TYPO3_MODE (Commit 598aab5 by Yassine Abid)
+    2023-08-31 [BUGFIX] Fix no_typoscript error for version 11 (Commit ee9a068 by Yassine Abid)
+    2023-08-31 [TASK] Fix soft logout (Commit d509179 by Yassine Abid)
+    2023-08-31 [TASK] Fix cs (Commit 014547d by Yassine Abid)
+    2023-08-31 [TASK] Require cs fixer on dev environment (Commit 5747ee2 by Yassine Abid)
+    2022-03-10 Merge pull request #19 from elbebass/4-0-x (Commit 3930c79 by Max Rösch)
+    2022-03-10 [BUGFIX] ParseFunc must return int instead of real boolean (Commit e006056 by Max Rösch)
+    2022-03-09 Merge pull request #18 from elbebass/4-0-x (Commit 060f4e7 by Max Rösch)
+    2022-03-08 [TASK] Get rid of obsolete user model (Commit 0148360 by Max Rösch)
+    2022-03-08 [WIP] Frontend user updates working - authentication still in progress (Commit 6801b33 by Max Rösch)
+    2022-03-08 [WIP] Refactoring (Commit 581c31a by Max Rösch)
+    2022-03-08 [TASK] Remove Auth0Middleware for the moment (Commit 27ca43d by Max Rösch)
+    2022-03-08 [TASK] Unify naming of extension manager configuration (Commit 773f457 by Max Rösch)
+    2022-03-08 [TASK] Add correct handling of soft logout process (Commit 220aaed by Max Rösch)
+    2022-03-08 [TASK] Remove todo after checking code (Commit 13fbbf7 by Max Rösch)
+    2022-03-08 [BUGFIX] Decode management API response correctly (Commit 34dbd50 by Max Rösch)
+    2022-03-08 [WIP] Some more small refactoring changes (Commit ae48ee5 by Max Rösch)
+    2022-03-04 [TASK] Refactor SSL key getter function (Commit b664faa by Max Rösch)
+    2022-03-04 Merge pull request #17 from elbebass/4-0-x (Commit fe88c2a by Max Rösch)
+    2022-03-04 [BUGFIX] Add missing bracket resulting from merge conflict (Commit 549121a by Max Rösch)
+    2022-03-04 Merge pull request #16 from elbebass/4-0-x (Commit 3cdadb2 by Max Rösch)
+    2022-03-04 Merge branch 'dev-4.x' into 4-0-x (Commit d1364a8 by Max Rösch)
+    2022-03-03 [TASK] Update library composer json (Commit c5062cf by Max Rösch)
+    2022-03-03 [WIP] Start documentation while debugging (Commit cf6675f by Max Rösch)
+    2022-03-03 [TASK] Update and normalize composer json (Commit 5ebe3c4 by Max Rösch)
+    2022-03-02 [TASK] Move model in cleaner namespace (Commit 8c7396b by Max Rösch)
+    2022-03-02 [TASK] Update version matrxi (Commit aad81fc by Max Rösch)
+    2022-02-24 [TASK] Add callback to login action and echo URL for further debugging (Commit f312c8e by Max Rösch)
+    2022-02-24 [TASK] Add new company code-style and adapt files (Commit 5dc044d by Max Rösch)
+    2022-02-24 [TASK] Refactor factory class (Commit 80048cd by Max Rösch)
+    2022-02-24 [TASK] Remove secret_base64_encoded configuration (Commit 0826a2c by Max Rösch)
+    2022-02-24 [TASK] Refactor factory class and usage (Commit d112ea2 by Max Rösch)
+    2022-02-24 [TASK] Remove JwtConfiguration class which only provided two constants now (Commit 4678cc1 by Max Rösch)
+    2022-02-24 [BUGFIX] Remove wrong CSS class from textfield (Commit 785a9d8 by Max Rösch)
+    2022-02-24 [BUGFIX] Remove wrong CSS class from textfield (Commit 1929b74 by Max Rösch)
+    2022-02-24 [CODE Codestyle (Commit 6ea3e1d by Max Rösch)
+    2022-02-24 [WIP] BE user creation and update working (Commit 699b709 by Max Rösch)
+    2022-02-21 [BUGFIX] Fix backend logout with redirect (Commit ec0f1ee by Max Rösch)
+    2022-02-21 [WIP] Working but bugs :p (Commit 78d4a45 by Max Rösch)
+    2022-02-21 [TASK] Remove obsolete fluid count (Commit 9c70191 by Max Rösch)
+    2022-02-21 [TASK] Disable / remove tests for the moment (Commit f2309b4 by Max Rösch)
+    2022-02-21 [TASK] Use image viewhelper for Auth0 logo on login view (Commit 97a4380 by Max Rösch)
+    2022-02-21 [BUGFIX] Fix missing namespace and form select styling for Bootstrap v5 (Commit 3b7a6ac by Max Rösch)
+    2022-02-18 [WIP] Refactor session handling (Commit 48bdcd9 by Max Rösch)
+    2022-02-18 [TASK] Update CI file to reflect new php-cs-fixer configuration file name (Commit d23b950 by Max Rösch)
+    2022-02-18 [CODE] Codestyle (Commit 7285070 by Max Rösch)
+    2022-02-18 [WIP] Remove old API etc. and introduce basic SDK usage (Commit 978cd04 by Max Rösch)
+    2022-02-18 [TASK] Move PHP-CS-fixer config file to prefered name (Commit 048f471 by Max Rösch)
+    2022-02-16 [TASK] Code clean up - parameters etc. (Commit 2312375 by Max Rösch)
+    2022-02-16 [TASK] Code clean up - parameters etc. (Commit d6008e3 by Max Rösch)
+    2022-02-16 [TASK] Update icon usage (Commit 35d6416 by Max Rösch)
+    2022-02-16 [TASK] Use Utils:jsonEncode instead of deprecated method (Commit adefe2f by Max Rösch)
+    2022-02-16 [TASK] Update language files and add translation (Commit de0d21b by Max Rösch)
+    2022-02-16 [TASK] Optimize svg icons (Commit 68d4c39 by Max Rösch)
+    2022-02-16 [TASK] Adapt CI for TYPO3 v10 / v11 with PHP 7.4 / 8.0 (Commit 838bd45 by Max Rösch)
+    2022-02-16 [TASK] Remove deprecated usage of environmentService (Commit 5da6c90 by Max Rösch)
+    2022-02-16 [TASK] Update composer dependencies and infos (Commit 5d9d318 by Max Rösch)
+    2022-02-16 [TASK] Add new Bootstrap card class to maintain style (Commit 4dd282d by Max Rösch)
+    2022-02-16 [TASK] Add Fluid namespaces to template files (Commit 2cd4ba1 by Max Rösch)
+    2021-09-13 [CODE] Codestyle (Commit 0f179b6 by Max Rösch)
+    2021-09-13 [TASK] Remove StopActionException and use ResponseInterface (Commit 7605da4 by Max Rösch)
+    2021-09-10 [TASK] Use TYPO3 version class instead of runtime constants (Commit acc5077 by Max Rösch)
+    2021-09-10 [TASK] Add new card class to support Bootstrap v5 (Commit ddec423 by Max Rösch)
+    2021-09-10 [TASK] Remove deprecated TYPO3_MODE constant (Commit 2429a59 by Max Rösch)
+    2021-08-30 [TASK] Update TER release script (Commit 639a626 by Max Rösch)
+    2021-08-05 [TASK] Fix language file typos (Commit 2b6336b by Max Rösch)
+    2021-08-04 [TASK] Add possibility to add an anchor to the referrer url (Commit 6b38ac6 by Max Rösch)
+    2021-08-03 Merge pull request #9 from Leuchtfeuer/Bugfix (Commit a16fc65 by Max Rösch)
+    2021-08-02 [BUGFIX] Require autoload only when environment is not in composer mode (Commit 22e2c7a by Fabian Martin) 
 
 s
