[FEATURE] Add configuration option to disable sudo mode bypass [TER-305]
Added a new extension configuration option 'disableSudoModeBypass' that
allows administrators to control whether Auth0-authenticated users can
bypass TYPO3's sudo mode password confirmation dialog. When enabled,
standard TYPO3 sudo mode behavior is enforced for all users.

Changes:
- Extended SudoModeRequiredEventListener with configuration check
- Added extension configuration option and documentation
- Included localization labels for the new setting

--- a/Resources/Private/Language/locallang_em.xlf
+++ b/Resources/Private/Language/locallang_em.xlf
@@ -21,6 +21,9 @@
 			<trans-unit id="backend.additional_authorize_parameters" resname="backend.additional_authorize_parameters">
 				<source><![CDATA[Additional Query Parameters: Additional query parameters for backend authentication (e.g. "access_type=offline&connection=google-oauth2")]]></source>
 			</trans-unit>
+            <trans-unit id="backend.disable_sudo_mode_bypass" resname="backend.disable_sudo_mode_bypass">
+                <source>Disable Sudo Mode Bypassing: If set, a password confirmation dialog is shown on accessing modules in the Admin Tools section</source>
+            </trans-unit>
 			<trans-unit id="frontend.enable_frontend_login" resname="frontend.enable_frontend_login">
 				<source>Frontend Log In: Enable Auth0 log in for TYPO3 frontend</source>
 			</trans-unit>
